# tower-defense

./: .clang-format  .gitignore  CMakeLists.txt  Makefile.macOS  PROMPTS.md  README.md  SPEC.md
.claude/: settings.local.json
data/models/: Archer1.glb  npc1.glb
data/models/Archer/: AimDraw.fbx  AimDraw.glb  AimIdle.fbx  AimIdle2.fbx  AimRecoil.fbx  ArcherT.fbx  ArcherT.glb  Idle1.glb  Idle3.glb  Idle4.glb  StandingIdle.fbx  StandingIdle2.fbx  StandingIdle3.fbx  archerT2.glb  archerT3.glb  archerT4.glb  archerT5.glb  bow.mtl
data/models/Zombie/: Untitled.fbx  zombieRun.glb  zombieT.glb
data/models/armoredzombie/: armoredzombie.fbx
data/models/arquebus/: arquebusFire.glb  arquebusIdle.glb  arquebusIdleAim.glb  arquebusPrefire.glb  arquebusT.glb  arquebusT2.glb  arquebusT3.glb  arquebusT4.glb  arquebusT5.glb  arquebusweapon.mtl
data/models/crossbow/: crossbow.fbx
data/models/world/: castle.mtl
data/shaders/: anim_shader.frag  anim_shader.vert  grass.frag  grass.vert  grid.frag  grid.vert  lantern.frag  lantern.vert  line.frag  line.vert  path.frag  path.vert  preview.frag  preview.vert  shader.frag  shader.vert  sky.frag  sky.vert
include/engine/: anim_data.h  animated_model.h  animatedmodel.h  app_state.h  camera.h  catmull_rom.h  game_object.h  gameobject.h  hud.h  lighting.h  mesh.h  obj_loader.h  parser.h  primitive_meshes.h  shader_utils.h  texture_loader.h
include/game/: app_state.h  defender_system.h  enemy_system.h  game_constants.h  path_navigation.h  scene.h  troop_placement.h  troop_selection.h  upgrade_system.h
include/input/: camera_controller.h  input_handler.h
include/math/: constants.h  matrix.h  matrix_ops.h  opengl_utils.h  transforms.h  vector.h  vector_ops.h
include/render/: render_constants.h  scene_renderer.h  shader_uniforms.h
include/world/: path_generator.h
scripts/: build.bat  run.bat
src/: main.cpp
src/engine/: animated_model.cpp  animatedmodel.cpp  camera.cpp  catmull_rom.cpp  game_object.cpp  gameobject.cpp  hud.cpp  lighting.cpp  mesh.cpp  obj_loader.cpp  parser.cpp  parser.h  primitive_meshes.cpp  shader_program.cpp  shader_utils.cpp  texture_loader.cpp
src/game/: defender_system.cpp  enemy_system.cpp  path_navigation.cpp  scene.cpp  troop_placement.cpp  troop_selection.cpp  upgrade_system.cpp
src/input/: camera_controller.cpp  input_handler.cpp
src/render/: scene_renderer.cpp  shader_uniforms.cpp
src/world/: path_generator.cpp
